# graph_grammar_solver

./: ATLASConfig.cmake  Analysis.cc  Analysis.cpp  Analysis.h  Analysis.hpp  CMakeLists.txt  Element.hpp  EquationSystem.cc  EquationSystem.cpp  EquationSystem.h  EquationSystem.hpp  Mesh.cc  Mesh.cpp  Mesh.h  Mesh.hpp  Node.cc  Node.cpp  Node.h  Node.hpp  README.md  Solver.cc  Solver.h  log.c  main.cc
cmake/Modules/: FindATLAS.cmake
solver/: CMakeLists.txt  EquationSystem.cc  EquationSystem.h  Node.cc  Node.h  Solver.cc  Solver.h  log.h  main.cc
tests/: CMakeLists.txt  test_schur.cpp  test_schur_chol.cpp  test_schur_lu.cpp
trees/: example_tree_1  example_tree_2  example_tree_3  example_tree_4
